# resizer

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  processor.rs
