[package]
name = "sizify"
version = "1.0.0"
edition = "2024"
description = "A CLI tool to compress images to fit under a target size in KB by adjusting quality and downscaling if needed"
license = "MIT"
repository = "https://github.com/junkpiano/resizer"
homepage = "https://github.com/junkpiano/resizer"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
webp = "0.3"