[package]
name = "sizify"
version = "1.0.1"
edition = "2024"
description = "A CLI tool to compress images to fit under a target size in KB by adjusting quality and downscaling if needed"
license = "MIT"
repository = "https://github.com/junkpiano/sizify"
homepage = "https://github.com/junkpiano/sizify"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
webp = "0.3"